--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="RoboLearn - Igniting the Future of Robotics Education"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <!--
